Update javafx to 12, junit to 5.4.2