@@ -1,34 +1,23 @@
-apply plugin: 'java'
+plugins {
+    id 'java'
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.7'
+}
 
 repositories {
     jcenter()
 }
 
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.google.gradle:osdetector-gradle-plugin:1.6.0'
-    }
-}
-
-apply plugin: 'application'
-apply plugin: 'com.google.osdetector'
-
-ext.platform = osdetector.os == 'osx' ? 'mac' : osdetector.os == 'windows' ? 'win' : osdetector.os
-
 dependencies {
     compile 'org.json:json:20180813'
     compile 'org.jsoup:jsoup:1.11.3'
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.3.0'
-    testImplementation 'org.junit.jupiter:junit-jupiter-params:5.3.0'
-    testImplementation 'org.hamcrest:hamcrest-library:1.3'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.3.0'
-    compile "org.openjfx:javafx-base:11:$platform"
-    compile "org.openjfx:javafx-graphics:11:$platform"
-    compile "org.openjfx:javafx-controls:11:$platform"
-    compile "org.openjfx:javafx-media:11:$platform"
+    testImplementation('org.junit.jupiter:junit-jupiter:5.4.2')
+    testImplementation 'org.hamcrest:hamcrest-library:1.3' // 2.1
+}
+
+javafx {
+    modules = [ 'javafx.controls', 'javafx.media', 'javafx.graphics']
+    version = "12"
 }
 
 test {
@@ -42,25 +31,6 @@ task customFatJar(type: Jar) {
     baseName = 'guesscharts'
     from { configurations.compile.collect { it.isDirectory() ? it : zipTree(it) } }
     with jar
-}
-
-compileJava {
-    doFirst {
-        options.compilerArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls'
-        ]
-    }
-}
-
-run {
-    doFirst {
-        jvmArgs = [
-                '--module-path', classpath.asPath,
-                '--add-modules', 'javafx.controls',
-                '--add-modules', 'javafx.media'
-        ]
-    }
 }
 
 mainClassName = 'guesscharts.java_fx.Gui'
